# synapse

./: .gitignore  README.md  Synapse_Revised_Product_Document.docx  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: langchain_example.py  openai_example.py  synapse_example.py
synapse/: __init__.py  agent.py  chain.py  cli.py  mock.py  tool.py  workflow.py
tests/: conftest.py  test_agent.py  test_chain.py  test_tool.py
