[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-runtime"
version = "0.1.0"
description = "The AI Application Runtime — @agent, @tool, >> chaining, any model."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "sheheryar", email = "thesheheryarahmad767@gmail.com" }
]
requires-python = ">=3.10"


keywords = ["ai", "llm", "agents", "runtime", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/sheheryar/synapse"
Repository = "https://github.com/sheheryar/synapse.git"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
synapse = "synapse.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["synapse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
